--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             CEREALES</button>
                     </li>
                     <li>
-                        <a class="boton-menu boton-carrito" href="/carrito.html">
+                        <a class="boton-menu boton-carrito" href="./carrito.html">
                             <i class="bi bi-cart-fill"></i> CARRITO <span id="numerito" class="numerito">0</span>
                         </a>
                     </li>
