--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./principal.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="/principal.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./index.html">Productos</a>
