--- a/principal.html
+++ b/principal.html
@@ -40,7 +40,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
     <title>Tukura-Home</title>
 </head>
 
@@ -63,7 +63,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./principal.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="/principal.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./index.html">Productos</a>
