--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,7 +34,7 @@
     <meta property="twitter:title" content="TUKURA - Conciencia Alimentaria">
     <meta property="twitter:description"
         content="TUKURA, tienda on line donde encontrarás alimentos saludables para sumar a tus comidas. Contamos con una gran variedad de frutos secos y dátiles, frutas y verduras congeladas, semillas, cereales y legumbres. Todos los alimentos son orgánicos, libre de agro químicos y sin pesticidas. Hacemos envíos a todo el país.">
-    <meta property="twitter:image" content="/assets/tukura.JPG">
+    <meta property="twitter:image" content="/img/tukura.JPG">
 
     <!-- CONECTA A CSS y BOOSTRAP-->
     <script src="https://kit.fontawesome.com/b8c8bb17d3.js" crossorigin="anonymous"></script>
@@ -51,7 +51,7 @@
     <header class=" header sticky-top">
         <nav class="navbar bg-light fixed-top navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/principal.html"> <b>TUKURA</b></a>
+                <a class="navbar-brand" href="../principal.html"> <b>TUKURA</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -65,16 +65,16 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/principal.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="../principal.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/index.html">Productos</a>
+                                <a class="nav-link" href="../index.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
+                                <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
