--- a/carrito.html
+++ b/carrito.html
@@ -16,7 +16,7 @@
     <header class="header sticky-top">
         <nav class="navbar bg-light fixed-top navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/principal.html"> <b>TUKURA</b></a>
+                <a class="navbar-brand" href="/index.html"> <b>TUKURA</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -30,11 +30,9 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="nav-link" href="./index.html">Productos</a>
                             </li>
+
                         </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
@@ -57,19 +55,17 @@
             <button class="close-menu" id="close-menu">
                 <i class="bi bi-x"></i>
             </button>
-            <header>
-                <h1 class="logo">TUKURA Shop</h1>
-            </header>
+
             <nav>
                 <ul>
                     <li>
                         <a class="boton-menu boton-volver" href="./index.html">
-                            <i class="bi bi-arrow-return-left"></i> Seguir comprando
+                            <i class="bi bi-arrow-return-left"></i> SEGUIR COMPRANDO
                         </a>
                     </li>
                     <li>
                         <a class="boton-menu boton-carrito active" href="./carrito.html">
-                            <i class="bi bi-cart-fill"></i> Carrito
+                            <i class="bi bi-cart-fill"></i> CARRITO
                         </a>
                     </li>
                 </ul>
