--- a/carrito.html
+++ b/carrito.html
@@ -16,7 +16,7 @@
     <header class="header sticky-top">
         <nav class="navbar bg-light fixed-top navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href=""> <b>TUKURA</b></a>
+                <a class="navbar-brand" href="/index.html"> <b>TUKURA</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -65,7 +65,7 @@
                     </li>
                     <li>
                         <a class="boton-menu boton-carrito active" href="./carrito.html">
-                            <i class="bi bi-cart-fill"></i> CARRITO
+                            <i class="bi bi-cart-fill"></i> Carrito
                         </a>
                     </li>
                 </ul>
