--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./index.html">Productos</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contacto.html">Contacto</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
