--- a/nosotros.html
+++ b/nosotros.html
@@ -56,10 +56,10 @@
 <body class="bg-body-tertiary">
 
     <!--HEADER Y NAV-->
-    <header class=" header sticky-top">
+    <header class="header sticky-top">
         <nav class="navbar bg-light fixed-top navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"> <b>TUKURA</b></a>
+                <a class="navbar-brand" href="./index.html"> <b>TUKURA</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -67,16 +67,19 @@
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
-                        <p class="offcanvas-title" id="offcanvasNavbarLabel">TUKURA</p>
+                        <p class="offcanvas-title" id="offcanvasNavbarLabel"><b>TUKURA</b></p>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                                <a class="nav-link" href="./index.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/index.html">Productos</a>
+                                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contacto.html">Contacto</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
@@ -116,7 +119,7 @@
                     </p>
                 </div>
                 <div class="col-lg-6 m-0 p-0">
-                    <img class="nosotros__img img-fluid mt-3 mb-3" src="/img/compra2.avif" alt="Cliente comprando cerealeas">
+                    <img class="nosotros__img img-fluid mt-3 mb-3" src="./img/compra2.avif" alt="Cliente comprando cerealeas">
                 </div>
             </div>
         </div>
@@ -132,7 +135,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 xs-12 d-flex justify-content-center">
                         <div class="card mt-3" style="width: 18rem;">
-                            <img src="/img/local4.avif" class="card-img-top p-2"
+                            <img src="./img/local4.avif" class="card-img-top p-2"
                                 alt="Imagen del local  de Palermo, Ciudad Autónoma de Buenos Aires">
                             <div class="card-body pt-0 ps-4">
                                 <p class="card-text pt-0 mt-0 mb-0"> <span
@@ -146,7 +149,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 xs-12 d-flex justify-content-center">
                         <div class="card mt-3" style="width: 18rem;">
-                            <img src="/img/local3.avif" class="card-img-top p-2"
+                            <img src="./img/local3.avif" class="card-img-top p-2"
                                 alt="Imagen del local de Belgrano, Ciudad Autónoma de Buenos Aires">
                             <div class="card-body pt-0 ps-4">
                                 <p class="card-text pt-0 mt-0 mb-0"><span class="titulo_card">Belgrano:</span> <br>
@@ -159,7 +162,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 xs-12 d-flex justify-content-center">
                         <div class="card mt-3" style="width: 18rem;">
-                            <img src="/img/local2.avif" class="card-img-top p-2"
+                            <img src="./img/local2.avif" class="card-img-top p-2"
                                 alt="Imagen del local de Vicente López, Provincia de Buenos Aires">
                             <div class="card-body pt-0 ps-4">
                                 <p class="card-text pt-0 mt-0 mb-0"><span class="titulo_card">Vicente López:</span> <br>
@@ -173,7 +176,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 xs-12 d-flex justify-content-center">
                         <div class="card mt-3" style="width: 18rem;">
-                            <img src="/img/local1.avif" class="card-img-top p-2"
+                            <img src="./img/local1.avif" class="card-img-top p-2"
                                 alt="Imagen del local de San Isidro, Provincia de Buenos Aires">
                             <div class="card-body pt-0 ps-4">
                                 <p class="card-text pt-0 mt-0 mb-0"><span class="titulo_card">San Isidro:</span> <br>
