--- a/contacto.html
+++ b/contacto.html
@@ -40,9 +40,9 @@
     <script src="https://kit.fontawesome.com/b8c8bb17d3.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Tukura-Contactanos</title>
-    <link rel="icon" href="/img/t.png">
+    <link rel="icon" href="./img/t.png">
 </head>
 
 <body class="bg-body-tertiary">
