--- a/nosotros.html
+++ b/nosotros.html
@@ -49,6 +49,7 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <title>Tukura-Home</title>
+    <link rel="icon" href="./img/t.png">
 
 
 </head>
