--- a/contacto.html
+++ b/contacto.html
@@ -65,6 +65,9 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
+                                <a class="nav-link" href="./principal.html">Home</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="./index.html">Productos</a>
                             </li>
                             <li class="nav-item">
