--- a/principal.html
+++ b/principal.html
@@ -6,20 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CONECTA A CSS y BOOSTRAP-->
-    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-
-    <!--SEO-->
+<!--SEO-->
     <meta name="description"
         content="TUKURA, tienda on line donde encontrarás alimentos saludables para sumar a tus comidas. Contamos con una gran variedad de frutos secos y dátiles, frutas y verduras congeladas, semillas, cereales y legumbres. Todos los alimentos son organicos, libre de agro quimicos y sin pesticidas. Hacemos envíos a todo el país.">
-    <meta name="keywords"
-        content="nosotros, sobre nosotros, tukura, frutos secos, legumbres, cereales, fruta congelada, verdura congelada, dietética, compra on line, natural, orgánico, comida sana, salubdable  ">
+    <meta name="keywords" content="tukura, frutos secos, legumbres, cereales, fruta congelada, verdura congelada, dietética, compra on line, natural, orgánico, comida sana, salubdable  ">
 
     <title>TUKURA - Conciencia Alimentaria</title>
-    <link rel="icon" href="/img/t.png">
+    <link rel="icon" href="./img/t.png">
 
     <meta name="title" content="TUKURA - Conciencia Alimentaria">
     <meta name="description"
@@ -32,7 +25,7 @@
     <meta property="og:title" content="TUKURA - Conciencia Alimentaria">
     <meta property="og:description"
         content="TUKURA, tienda on line donde encontrarás alimentos saludables para sumar a tus comidas. Contamos con una gran variedad de frutos secos y dátiles, frutas y verduras congeladas, semillas, cereales y legumbres. Todos los alimentos son orgánicos, libre de agro químicos y sin pesticidas. Hacemos envíos a todo el país.">
-    <meta property="og:image" content="/assets/tukura.JPG">
+    <meta property="og:image" content="/img/tukura.JPG">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -40,27 +33,23 @@
     <meta property="twitter:title" content="TUKURA - Conciencia Alimentaria">
     <meta property="twitter:description"
         content="TUKURA, tienda on line donde encontrarás alimentos saludables para sumar a tus comidas. Contamos con una gran variedad de frutos secos y dátiles, frutas y verduras congeladas, semillas, cereales y legumbres. Todos los alimentos son orgánicos, libre de agro químicos y sin pesticidas. Hacemos envíos a todo el país.">
-    <meta property="twitter:image" content="/assets/tukura.JPG">
+    <meta property="twitter:image" content="/img/tukura.JPG">
 
     <!-- CONECTA A CSS y BOOSTRAP-->
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-
+    
+        <link rel="stylesheet" href="./css/style.css">
     <title>Tukura-Home</title>
-    <link rel="icon" href="./img/t.png">
-
-
 </head>
 
-<body class="bg-body-tertiary">
-
+<body>
     <!--HEADER Y NAV-->
     <header class="header sticky-top">
         <nav class="navbar bg-light fixed-top navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"> <b>TUKURA</b></a>
+                <a class="navbar-brand" href="/principal.html"> <b>TUKURA</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -74,7 +63,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link" href="./principal.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="/principal.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./index.html">Productos</a>
@@ -97,99 +86,109 @@
     </header>
 
     <main>
-        <section class="hero_pages">
-            <div class="pages__fondo  d-flex align-items-center align-content-center">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12">
-                            <h1 class="hero_pages_h1 text-start mt-5">Sobre Nosotros</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </section>
-
-        <div class="container bg-light">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2 class="h2_title pt-4 pb-4">Quienes somos?</h2>
-                    <p class="container_p card-text">TUKURA® es un mercado saludable, consciente y sustentable.
-                        <br>Trabajamos comprometidos en seleccionar y acercarte alimentos naturales. <br> <br>¡Nuestro
-                        propósito
-                        es hacértela fácil! Te acompañamos para que alimentarte de forma saludable sea práctico,
-                        llegando a
-                        la puerta de tu casa y ofreciéndote el mejor precio.
-                    </p>
-                </div>
-                <div class="col-lg-6 m-0 p-0">
-                    <img class="nosotros__img img-fluid mt-3 mb-3" src="./img/compra2.avif" alt="Cliente comprando cerealeas">
-                </div>
-            </div>
-        </div>
-
-        <section class="fondo-fijo">
-        </section>
-
-        <section class="locales d-flex justify-content-center pb-5">
-            <div class="container">
+        <section class="hero" id="hero">
+            <div class="hero__content container-fluid ">
                 <div class="row">
-                    <div class="col-12 mt-3">
-                        <h2 class="h2_title">Nuestros Locales:</h2>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-10">
+                        <h1 class="pb-1 pt-5 text-center">TUKURA</h1>
+                        <h2 class="h2_title ms-5 mb-1">Conciencia Alimentaria</h2>
+                        <p class="ms-5">Encontraras todo lo que necesitas para <br> una alimentación
+                            conciente y equilibrada</p>
+                        <a href="./pages/productos.html" class="btn0 d-grid gap-1 col-6 mx-auto pt-1 text-center">Conocenos</a>
                     </div>
-                    <div class="col-lg-3 col-md-6 xs-12 d-flex justify-content-center">
-                        <div class="card mt-3" style="width: 18rem;">
-                            <img src="./img/local4.avif" class="card-img-top p-2"
-                                alt="Imagen del local  de Palermo, Ciudad Autónoma de Buenos Aires">
-                            <div class="card-body pt-0 ps-4">
-                                <p class="card-text pt-0 mt-0 mb-0"> <span
-                                        class="titulo_card">Palermo:</span><br>Av.Santa
-                                    Fe 2358</p>
-                                <p class="card-text mt-0"><span class="titulo_card">Horarios:</span><br>Lu a Vi de 9 a
-                                    18 hs
+                </div>
+            </div>
+            </div>
+        </section>
+
+        <section class="iconos">
+            <div class="container py 10">
+                <div class="row pt-3">
+                    <div class="col-lg-9 col-md-12 col-sm-12 m-auto">
+                        <div class="icon row text-center">
+                            <div class="col-lg-3 col-md-3 col-sm-6">
+                                <img src="/img/icon2.avif" class="icon__img img-fluid"
+                                    alt="Icono productos naturales">
+                                <h3 class="icon__h3">Productos Naturales</h3>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-6">
+                                <img src="/img/icon1.avif" class="icon__img img-fluid"
+                                    alt="Icono productos 100% organicos">
+                                <h3 class="icon__h3">100% organicos</h3>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-6">
+                                <img src="/img/icon3.avif" class="icon__img img-fluid"
+                                    alt="Icono productos sin agro químicos">
+                                <h3 class="icon__h3">Sin Agro-químicos</h3>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-6">
+                                <img src="/img/icon4.avif" class="icon__img img-fluid"
+                                    alt="Icono envases ecológicos}">
+                                <h3 class="icon__h3">Envases ecológicos</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
+        <section class="product">
+            <div class="container py-10">
+                <div class="row py-5 m-auto text-left">
+                    <div class="col-lg-7">
+                        <h2 class="h2_title"> <u>Alimentos Naturales: </u></h2>
+                        <h3 class="mt-">Proximamente disfrutarás de nuestro blog con toda la información para aprender e incorporarlos en nuestras comidas.</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-xs-1 text-center mb-2">
+                        <div class="card bg-light">
+                            <img src="/img/rate1.avif" class="card-img-top"
+                                alt="Mix de semillas, porotos negros, soja, manies, porotos mung y almendras">
+                            <div class="card-body">
+                                <h4 class="card-title fw-bold">Legumbres</h4>
+                                <p class="card-text">Suman proteínas, energía y fibra a tus platos de todos los días.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 xs-12 d-flex justify-content-center">
-                        <div class="card mt-3" style="width: 18rem;">
-                            <img src="./img/local3.avif" class="card-img-top p-2"
-                                alt="Imagen del local de Belgrano, Ciudad Autónoma de Buenos Aires">
-                            <div class="card-body pt-0 ps-4">
-                                <p class="card-text pt-0 mt-0 mb-0"><span class="titulo_card">Belgrano:</span> <br>
-                                    Av.Cabildo 2489</p>
-                                <p class="card-text mt-0"><span class="titulo_card">Horarios:</span><br>Lu a Vi de 9 a
-                                    18 hs
+                    <div class="col-lg-3 col-md-6 col-xs-1 text-center mb-2">
+                        <div class="card bg-light">
+                            <img src="/img/rate2.avif" class="card-img-top"
+                                alt="Mix de frutos secos, compoteras con avellanas, almendras, nueces y pistachos">
+                            <div class="card-body">
+                                <h4 class="card-title fw-bold"> Frutos Secos</h4>
+                                <p class="card-text">Sus grasas insaturadas protegen al corazón de posibles
+                                    enfermedades.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 xs-12 d-flex justify-content-center">
-                        <div class="card mt-3" style="width: 18rem;">
-                            <img src="./img/local2.avif" class="card-img-top p-2"
-                                alt="Imagen del local de Vicente López, Provincia de Buenos Aires">
-                            <div class="card-body pt-0 ps-4">
-                                <p class="card-text pt-0 mt-0 mb-0"><span class="titulo_card">Vicente López:</span> <br>
-                                    Av.Maipú 2685
-                                </p>
-                                <p class="card-text mt-0"><span class="titulo_card">Horarios:</span><br>Lu a Vi de 9 a
-                                    18 hs
+                    <div class="col-lg-3 col-md-6 col-xs-1 text-center mb-2">
+                        <div class="card bg-light">
+                            <img src="/img/rate3.avif" class="card-img-top"
+                                alt="Cucharas con especias, curcuma, mostaza, piumienta y pimentón">
+                            <div class="card-body">
+                                <h4 class="card-title fw-bold"> Especias </h4>
+                                <p class="card-text">Aportan salud y energía al organismo, también calman el apetito.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 xs-12 d-flex justify-content-center">
-                        <div class="card mt-3" style="width: 18rem;">
-                            <img src="./img/local1.avif" class="card-img-top p-2"
-                                alt="Imagen del local de San Isidro, Provincia de Buenos Aires">
-                            <div class="card-body pt-0 ps-4">
-                                <p class="card-text pt-0 mt-0 mb-0"><span class="titulo_card">San Isidro:</span> <br>
-                                    Av.Centenario 569
-                                </p>
-                                <p class="card-text mt-0"><span class="titulo_card">Horarios:</span><br>Lu a Vi de 9 a
-                                    18 hs
+                    <div class="col-lg-3 col-md-6 col-xs-1 text-center mb-2">
+                        <div class="card bg-light">
+                            <img src="/img/rate4.avif" class="card-img-top"
+                                alt="Frascos con cereales, avena y copos de maíz">
+                            <div class="card-body">
+                                <h4 class="card-title fw-bold"> Cereales</h4>
+                                <p class="card-text">Son imprescindibles en cualquier dieta por sus vitaminas y
+                                    minerales.
                                 </p>
                             </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="col-lg-6 text-center m-auto pt-3 pb-5">
+                            <button class="btn0">-Proximamente-</button>
                         </div>
                     </div>
                 </div>
@@ -197,8 +196,7 @@
         </section>
     </main>
 
-
-    <!-- FOTTER -->
+    <!-- FOOTER -->
     <footer class="pie-pagina bg-body-tertiary">
         <div class="grupo-1">
             <div class="box">
@@ -207,7 +205,7 @@
             </div>
             <div class="box">
                 <h2 class="grupo-1__box">SUSCRIBETE AL NEWSLETTER</h2>
-                <form class="d-flex" role="send">
+                <form class="d-flex" role="">
                     <input class="form-control me-2" type="send" placeholder="Ingresá tu e-mail" aria-label="Search">
                     <button class="btn0 btn-outline-success" type="submit">Suscribirse</button>
                 </form>
@@ -224,7 +222,6 @@
             <small>&copy; 2021 <b>TUKURA</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
