--- a/principal.html
+++ b/principal.html
@@ -94,7 +94,7 @@
                         <h2 class="h2_title ms-5 mb-1">Conciencia Alimentaria</h2>
                         <p class="ms-5">Encontraras todo lo que necesitas para <br> una alimentación
                             conciente y equilibrada</p>
-                        <a href="./pages/productos.html" class="btn0 d-grid gap-1 col-6 mx-auto pt-1 text-center">Conocenos</a>
+                        <a href="./index.html" class="btn0 d-grid gap-1 col-6 mx-auto pt-1 text-center">Conocenos</a>
                     </div>
                 </div>
             </div>
@@ -107,22 +107,22 @@
                     <div class="col-lg-9 col-md-12 col-sm-12 m-auto">
                         <div class="icon row text-center">
                             <div class="col-lg-3 col-md-3 col-sm-6">
-                                <img src="/img/icon2.avif" class="icon__img img-fluid"
+                                <img src="./img/icon2.avif" class="icon__img img-fluid"
                                     alt="Icono productos naturales">
                                 <h3 class="icon__h3">Productos Naturales</h3>
                             </div>
                             <div class="col-lg-3 col-md-3 col-sm-6">
-                                <img src="/img/icon1.avif" class="icon__img img-fluid"
+                                <img src="./img/icon1.avif" class="icon__img img-fluid"
                                     alt="Icono productos 100% organicos">
                                 <h3 class="icon__h3">100% organicos</h3>
                             </div>
                             <div class="col-lg-3 col-md-3 col-sm-6">
-                                <img src="/img/icon3.avif" class="icon__img img-fluid"
+                                <img src="./img/icon3.avif" class="icon__img img-fluid"
                                     alt="Icono productos sin agro químicos">
                                 <h3 class="icon__h3">Sin Agro-químicos</h3>
                             </div>
                             <div class="col-lg-3 col-md-3 col-sm-6">
-                                <img src="/img/icon4.avif" class="icon__img img-fluid"
+                                <img src="./img/icon4.avif" class="icon__img img-fluid"
                                     alt="Icono envases ecológicos}">
                                 <h3 class="icon__h3">Envases ecológicos</h3>
                             </div>
@@ -142,7 +142,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-xs-1 text-center mb-2">
                         <div class="card bg-light">
-                            <img src="/img/rate1.avif" class="card-img-top"
+                            <img src="./img/rate1.avif" class="card-img-top"
                                 alt="Mix de semillas, porotos negros, soja, manies, porotos mung y almendras">
                             <div class="card-body">
                                 <h4 class="card-title fw-bold">Legumbres</h4>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 col-xs-1 text-center mb-2">
                         <div class="card bg-light">
-                            <img src="/img/rate2.avif" class="card-img-top"
+                            <img src="./img/rate2.avif" class="card-img-top"
                                 alt="Mix de frutos secos, compoteras con avellanas, almendras, nueces y pistachos">
                             <div class="card-body">
                                 <h4 class="card-title fw-bold"> Frutos Secos</h4>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 col-xs-1 text-center mb-2">
                         <div class="card bg-light">
-                            <img src="/img/rate3.avif" class="card-img-top"
+                            <img src="./img/rate3.avif" class="card-img-top"
                                 alt="Cucharas con especias, curcuma, mostaza, piumienta y pimentón">
                             <div class="card-body">
                                 <h4 class="card-title fw-bold"> Especias </h4>
@@ -176,7 +176,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 col-xs-1 text-center mb-2">
                         <div class="card bg-light">
-                            <img src="/img/rate4.avif" class="card-img-top"
+                            <img src="./img/rate4.avif" class="card-img-top"
                                 alt="Frascos con cereales, avena y copos de maíz">
                             <div class="card-body">
                                 <h4 class="card-title fw-bold"> Cereales</h4>
