--- a/carrito.html
+++ b/carrito.html
@@ -17,7 +17,7 @@
     <header class="header sticky-top">
         <nav class="navbar bg-light fixed-top navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/principal.html"> <b>TUKURA</b></a>
+                <a class="navbar-brand" href="./principal.html"> <b>TUKURA</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -31,9 +31,17 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
+                                <a class="nav-link" href="./principal.html">Home</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="./index.html">Productos</a>
                             </li>
-
+                            <li class="nav-item">
+                                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contacto.html">Contacto</a>
+                            </li>
                         </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
