--- a/carrito.html
+++ b/carrito.html
@@ -52,10 +52,9 @@
             </div>
         </nav>
     </header>
-
-    <div class="wrapper">
+    <div class="wrapper pt-5">
         <header class="header-mobile">
-            <h1 class="logo">TUKURA Shop</h1>
+            <h1 class="logo"></h1>
             <button class="open-menu" id="open-menu">
                 <i class="bi bi-list"></i>
             </button>
@@ -103,6 +102,7 @@
                 </div>
 
                 <p id="carrito-comprado" class="carrito-comprado disabled">Muchas gracias por tu compra. <br><br> Nos pondremos en contacto para coordinar tu envío. <i
+                    
                         class="bi bi-emoji-laughing"></i></p>
 
             </div>
