--- a/index.html
+++ b/index.html
@@ -54,8 +54,17 @@
         </nav>
     </header>
 
-    <div class="wrapper">
+    <div class="wrapper pt-5">
+        <header class="header-mobile">
+            <h1 class="logo"></h1>
+            <button class="open-menu" id="open-menu">
+                <i class="bi bi-list"></i>
+            </button>
+        </header>
         <aside>
+            <button class="close-menu" id="close-menu">
+                <i class="bi bi-x"></i>
+            </button>
             <nav>
                 <ul class="menu">
                     <li>
