--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,8 @@
     <script src="https://kit.fontawesome.com/b8c8bb17d3.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/contacto.js"></script>
     <title>Tukura-Contactanos</title>
     <link rel="icon" href="./img/t.png">
 </head>
@@ -115,34 +116,34 @@
                     <form>
                         <p class="m-3 mb-0 mt-3">
                             <label class="d-block">Nombre </label>
-                            <input type="text" name="name" placeholder="Ingrese su nombre">
+                            <input type="text" id="name" name="name" placeholder="Ingrese su nombre">
                         </p>
                         <p class="m-3 mb-0 mt-3">
                             <label class="d-block">Apellido</label>
-                            <input type="text" name="name" placeholder="Ingrese su apellido">
+                            <input type="text" id="lastname" name="lastname" placeholder="Ingrese su apellido">
                         </p>
                         <p class="m-3">
                             <label class="d-block">E-mail</label>
-                            <input type="email" name="email" placeholder="Ingrese su E-Mail">
+                            <input type="email" id="email" name="email" placeholder="Ingrese su E-Mail">
                         </p>
                         <p class="m-3">
                             <label class="d-block">Teléfono</label>
-                            <input type="text" name="phone" placeholder="Ingrese su Teléfono">
+                            <input type="text" id="phone" name="phone" placeholder="Ingrese su Teléfono">
                         </p>
                         <p class="full ms-3 me-3 mt-0 mb-0">
                             <label>Mensaje, sugerencia o Reclamo:</label>
-                            <textarea class="style" name="message" rows="3"
+                            <textarea class="style" id="message" name="message" rows="3"
                                 placeholder="Ingrese su mensaje, sugerencia o reclamo"></textarea>
                         </p>
 
                         <p class="full m-3">
-                            <button>Enviar</button>
+                            <button onclick="validateForm()">Enviar</button>
                         </p>
                     </form>
 
                 </div>
             </div>
-        </div>
+
 
         <!-- FONDO FIJO -->
         <section class="fondo-fijo mb-4 mt-4">
@@ -191,7 +192,7 @@
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
                                         <p><B>Hacemos envíos a todo el país mediante Correo Argentino</B>. La demora es
-                                            de 2 a 
+                                            de 2 a
                                             3 días hábiles a partir del momento del despacho. Los envío se relaizan
                                             Lunes, Miércoles y Viernes. <br>
                                             Si te encontras en <b>CABA y GBA</b>, los envios demoran entre 24 y 48 hs,
