modificacion ruta index

--- a/producto.html
+++ b/producto.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tukura</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <title>TUKURA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="icon" href="./img/t.png">
 </head>
@@ -32,10 +32,10 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">Home</a>
+                                <a class="nav-link" href="./principal.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./producto.html">Productos</a>
+                                <a class="nav-link" href="./index.html">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./nosotros.html">Nosotros</a>
@@ -53,6 +53,7 @@
             </div>
         </nav>
     </header>
+
     <div class="wrapper pt-5">
         <header class="header-mobile">
             <h1 class="logo"></h1>
@@ -64,49 +65,36 @@
             <button class="close-menu" id="close-menu">
                 <i class="bi bi-x"></i>
             </button>
-
             <nav>
-                <ul>
+                <ul class="menu">
                     <li>
-                        <a class="boton-menu boton-volver" href="./index.html">
-                            <i class="bi bi-arrow-return-left"></i> SEGUIR COMPRANDO
-                        </a>
+                        <button id="todos" class="boton-menu boton-categoria active"><i
+                                class="bi bi-hand-index-thumb-fill"></i> TODOS LOS PRODUCTOS</button>
                     </li>
                     <li>
-                        <a class="boton-menu boton-carrito active" href="./carrito.html">
-                            <i class="bi bi-cart-fill"></i> Carrito
+                        <button id="frutosSecos" class="boton-menu boton-categoria"><i
+                                class="bi bi-hand-index-thumb"></i> FRUTOS SECOS</button>
+                    </li>
+                    <li>
+                        <button id="legumbres" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i>
+                            LEGUMBRES</button>
+                    </li>
+                    <li>
+                        <button id="cereales" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i>
+                            CEREALES</button>
+                    </li>
+                    <li>
+                        <a class="boton-menu boton-carrito" href="./carrito.html">
+                            <i class="bi bi-cart-fill"></i> CARRITO <span id="numerito" class="numerito">0</span>
                         </a>
                     </li>
                 </ul>
             </nav>
         </aside>
         <main>
-            <h2 class="titulo-principal">Carrito</h2>
-            <div class="contenedor-carrito">
-                <p id="carrito-vacio" class="carrito-vacio">Tu carrito está vacío.</p>
-
-                <div id="carrito-productos" class="carrito-productos disabled">
-                    <!-- Ingresa con el JS -->
-                </div>
-
-                <div id="carrito-acciones" class="carrito-acciones disabled">
-                    <div class="carrito-acciones-izquierda">
-                        <button id="carrito-acciones-vaciar" class="carrito-acciones-vaciar">Vaciar carrito</button>
-                    </div>
-                    <div class="carrito-acciones-derecha">
-                        <div class="carrito-acciones-total">
-                            <p>Total:</p>
-                            <p id="total">$4000</p>
-                        </div>
-                        <button id="carrito-acciones-comprar" class="carrito-acciones-comprar">Comprar ahora</button>
-                    </div>
-                </div>
-
-                <p id="carrito-comprado" class="carrito-comprado disabled">Muchas gracias por tu compra. <br><br> Nos
-                    pondremos en contacto para coordinar tu envío.</p>
-
-
-
+            <h2 class="titulo-principal" id="titulo-principal">Todos los productos</h2>
+            <div id="contenedor-productos" class="contenedor-productos">
+                <!-- Esto se va a rellenar con JS -->
             </div>
         </main>
     </div>
@@ -121,8 +109,7 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./js/carrito.js"></script>
+    <script src="./js/main.js"></script>
     <script src="./js/menu.js"></script>
 </body>
 
