--- a/nosotros.html
+++ b/nosotros.html
@@ -60,7 +60,7 @@
     <header class="header sticky-top">
         <nav class="navbar bg-light fixed-top navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./principal.html"> <b>TUKURA</b></a>
+                <a class="navbar-brand" href="./index.html"> <b>TUKURA</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -74,10 +74,10 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link" href="./principal.html">Home</a>
+                                <a class="nav-link" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">Productos</a>
+                                <a class="nav-link" href="./producto.html">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./nosotros.html">Nosotros</a>
