--- a/carrito.html
+++ b/carrito.html
@@ -68,7 +68,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a class="boton-menu boton-volver" href="./index.html">
+                        <a class="boton-menu boton-volver" href="./producto.html">
                             <i class="bi bi-arrow-return-left"></i> SEGUIR COMPRANDO
                         </a>
                     </li>
